# mendel-vectorizer

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/: app.glade
docs/: memoria.bib  memoria.tex
src/: bezier.rs  corner.rs  export.rs  genetic.rs  main.rs
