[package]
name = "mendel-vectorizer"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
imageproc = "*"
cairo-rs = "0.5.0"
gdk = "0.9.0"
clap = "2.32.x"
gdk-pixbuf = "0.5.0"
rand = "0.5.5"
num_cpus = "1.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]
