[package]
name = "mendel-vectorizer"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24.2"
imageproc = "0.23.0"
cairo-rs = "0.15.12"
gdk = "0.15.4"
clap = "3.2.7"
gdk-pixbuf = "0.15.11"
rand = "0.8.5"
rand_distr = "0.4.3"
num_cpus = "1.13.1"

[dependencies.gtk]
version = "0.15.5"
